# AnythingWithPixie

./: .gitignore  README.md  StartPixie.bat  StartPixieHere.bat  config.json.example  open_py313.bat  pyproject.toml
.github/workflows/: ci.yml
docs/design/: toolpacks.md  trajectory-logging.md
docs/reports/: local-llm-quality-improvement.md
evals/: checkers.py  runner.py
evals/tasks/: 01_read_config_value.json  02_fix_off_by_one.json  03_fix_syntax_error.json  04_find_callers.json  05_create_new_file.json  06_grep_count.json  07_refactor_duplicate.json  08_ambiguous_default.json  09_nonexistent_file.json  10_multistep.json  11_manga_rename.json
evals/workspaces/01_read_config_value/: config_sample.py
evals/workspaces/02_fix_off_by_one/: foo.py
evals/workspaces/03_fix_syntax_error/: broken.py
evals/workspaces/04_find_callers/: main_app.py  other_module.py  report.py  utils.py
evals/workspaces/06_grep_count/: file_a.py  file_b.py  notes.txt
evals/workspaces/07_refactor_duplicate/: script.py
evals/workspaces/09_nonexistent_file/: readme.txt
evals/workspaces/10_multistep/: CHANGELOG.md
src/: capture.py  cli_input.py  code_index.py  code_tool.py  config.py  engine.py  engine_helpers.py  lessons.py  lfm_tooluse.py  llm_client.py  main.py  mcp_client.py  paths.py  pixie_core.py  registry.py  state.py  subagent.py  tools.py  trajectory.py
src/pixie_core/: __init__.py  _api.py  code_tool.py  config.py  engine.py  llm_client.py  paths.py  shadow_verify.py  state.py  subagent.py  tools.py
src/toolpacks/: __init__.py  manga.py
tests/: conftest.py  test_behavior_prompt_golden.py  test_cli_input.py  test_code_index.py  test_code_session.py  test_delegate_research.py  test_engine_guardrails.py  test_export_sft.py  test_harden.py  test_jit_recommend_scope.py  test_lessons.py  test_lfm_tooluse.py  test_manga_identify_cover.py  test_packaging_identity.py  test_pixie_core_api14.py  test_pixie_core_api15.py  test_pixie_core_api16.py  test_run_graph_blackbox.py  test_run_python.py  test_shadow_verify.py  test_state.py  test_streamfilter.py  test_toolpacks.py  test_tools_pure.py  test_trajectory.py  test_verify_loop.py  test_workspace_isolation.py
tests/golden/behavior_prompt/: 01_all_none__code.txt  01_all_none__deep.txt  01_all_none__manga.txt  02_empty_set__code.txt  02_empty_set__deep.txt  03_read_file__code.txt  03_read_file__deep.txt  (+19 more)
tools/: export_sft.py
